--- a/assets/styles/components/_wp-classes.scss
+++ b/assets/styles/components/_wp-classes.scss
@@ -10,37 +10,37 @@
 }
 .aligncenter {
   display: block;
-  margin: ($spacer / 2) auto;
+  // margin: ($spacer / 2) auto;
   height: auto;
 }
 .alignleft,
 .alignright {
-  margin-bottom: ($spacer / 2);
+  // margin-bottom: ($spacer / 2);
   height: auto;
 }
-@include media-breakpoint-up(sm) {
-  // Only float if not on an extra small device
-  .alignleft {
-    float: left;
-    margin-right: ($spacer / 2);
-  }
-  .alignright {
-    float: right;
-    margin-left: ($spacer / 2);
-  }
-}
+// @include media-breakpoint-up(sm) {
+//   // Only float if not on an extra small device
+//   .alignleft {
+//     float: left;
+//     margin-right: ($spacer / 2);
+//   }
+//   .alignright {
+//     float: right;
+//     margin-left: ($spacer / 2);
+//   }
+// }
 
 // Captions
 .wp-caption {
-  @extend .figure-img;
-  @extend .img-fluid;
+  // @extend .figure-img;
+  // @extend .img-fluid;
 }
 .wp-caption-text {
-  @extend .figure-caption;
+  // @extend .figure-caption;
 }
 
 // Text meant only for screen readers
 .screen-reader-text {
-  @extend .sr-only;
-  @extend .sr-only-focusable;
+  // @extend .sr-only;
+  // @extend .sr-only-focusable;
 }
