--- a/assets/styles/components/_wp-classes.scss
+++ b/assets/styles/components/_wp-classes.scss
@@ -10,25 +10,14 @@
 }
 .aligncenter {
   display: block;
-  // margin: ($spacer / 2) auto;
+  margin: ($spacer / 2) auto;
   height: auto;
 }
 .alignleft,
 .alignright {
-  // margin-bottom: ($spacer / 2);
+  margin-bottom: ($spacer / 2);
   height: auto;
 }
-// @include media-breakpoint-up(sm) {
-//   // Only float if not on an extra small device
-//   .alignleft {
-//     float: left;
-//     margin-right: ($spacer / 2);
-//   }
-//   .alignright {
-//     float: right;
-//     margin-left: ($spacer / 2);
-//   }
-// }
 
 // Captions
 .wp-caption {
@@ -41,6 +30,5 @@
 
 // Text meant only for screen readers
 .screen-reader-text {
-  // @extend .sr-only;
-  // @extend .sr-only-focusable;
+  display: none !important;
 }
