--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -43,6 +43,7 @@
 @import "components/grid";
 @import "components/wp-classes";
 
+@import "layouts/base";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
