--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -5,18 +5,22 @@
 $font-family-base:        "Open Sans", "Helvetica Neue", Helvetica, Arial, YuGothic, "Yu Gothic", "Noto Sans", "Hiragino Sans", Emoji, sans-serif !default;
 $font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
 
-$font-size-base:          16px;
-$font-size-large:         1.25rem;
-$font-size-small:         0.85rem;
+// MDL
+$preferred_font:   $font-family-base;
+$performance_font: $font-family-base;
 
-$font-size-h1:            2.6rem;
-$font-size-h2:            2.15rem;
-$font-size-h3:            1.7rem;
-$font-size-h4:            1.25rem;
+$font-size-base:          16px;
+$font-size-lg:            1.25rem;
+$font-size-sm:            0.85rem;
+
+$font-size-h1:            1.45rem;
+$font-size-h2:            1.30rem;
+$font-size-h3:            1.25rem;
+$font-size-h4:            1.20rem;
 $font-size-h5:            $font-size-base;
 $font-size-h6:            0.85rem;
 
-$line-height-base:        1.25; // 20/16
+$line-height-base:        1.75; // 28/16
 $line-height-computed:    floor(($font-size-base * $line-height-base));
 
 
@@ -34,15 +38,14 @@ $spacer: 1rem;
 
 // MDL
 $color-primary: $color-white;
-// $color-primary-dark: $palette-grey-700;
-// $color-accent: $palette-indigo-A200;
+$color-primary-dark: $palette-grey-700;
+$color-accent: $palette-grey-200;
 $color-primary-contrast: $palette-grey-700;
 $color-accent-contrast: $palette-grey-700;
 
 // original
-$text-color: unquote("rgb(#{$palette-grey-800})");
-$body-bg:    unquote("rgb(#{$palette-grey-200})");
-
 $link-color:            unquote("rgb(#{$palette-light-blue-400})");
 $link-hover-color:      unquote("rgb(#{$palette-light-blue-800})");
 $link-hover-decoration: underline;
+
+$table-border-color:    unquote("rgb(#{$palette-grey-200})");
