--- a/assets/styles/common/_font.scss
+++ b/assets/styles/common/_font.scss
@@ -11,7 +11,7 @@
 }
 .material-icons {
   @include typo-icon;
-  /* Preferred icon size */
+
   width: 1em;
   height: 1em;
   white-space: nowrap;
@@ -23,6 +23,8 @@
 
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
+
+  user-select: none;
 }
 
 // Rules for sizing the icon.
