--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,6 @@
+@import "~bourbon/app/assets/stylesheets/bourbon";
+@import "~bourbon-neat/app/assets/stylesheets/neat";
+
 // Import MDL from node_modules/...
 @import "~material-design-lite/src/color-definitions";
 @import "common/variables";
