--- a/assets/styles/common/_type.scss
+++ b/assets/styles/common/_type.scss
@@ -12,8 +12,8 @@ h1, h2, h3, h4, h5, h6 {
 h1,
 h2,
 h3 {
-  margin-top: $line-height-computed;
-  margin-bottom: ($line-height-computed / 2);
+  margin-top: $spacer;
+  margin-bottom: ($spacer / 2);
 
   small,
   .small {
@@ -23,8 +23,8 @@ h3 {
 h4,
 h5,
 h6 {
-  margin-top: ($line-height-computed / 2);
-  margin-bottom: ($line-height-computed / 2);
+  margin-top: ($spacer / 2);
+  margin-bottom: ($spacer / 2);
 
   small,
   .small {
