--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,4 +1,11 @@
 //
+// Modular scale
+// -------------------------
+$modular-scale-base:  1rem;
+$modular-scale-ratio: $major-second;
+
+
+//
 // Font
 // -------------------------
 
@@ -10,15 +17,15 @@ $preferred_font:   $font-family-base;
 $performance_font: $font-family-base;
 
 $font-size-base:          16px;
-$font-size-lg:            1.25rem;
-$font-size-sm:            0.85rem;
+$font-size-lg:            modular-scale(1);
+$font-size-sm:            modular-scale(-1);
 
-$font-size-h1:            1.45rem;
-$font-size-h2:            1.30rem;
-$font-size-h3:            1.25rem;
-$font-size-h4:            1.20rem;
-$font-size-h5:            $font-size-base;
-$font-size-h6:            0.85rem;
+$font-size-h1:            modular-scale(4);
+$font-size-h2:            modular-scale(3);
+$font-size-h3:            modular-scale(2);
+$font-size-h4:            modular-scale(1);
+$font-size-h5:            modular-scale(0);
+$font-size-h6:            modular-scale(-1);
 
 $line-height-base:        1.75; // 28/16
 $line-height-computed:    floor(($font-size-base * $line-height-base));
@@ -44,8 +51,8 @@ $color-primary-contrast: $palette-grey-700;
 $color-accent-contrast: $palette-grey-700;
 
 // original
-$link-color:            unquote("rgb(#{$palette-light-blue-400})");
-$link-hover-color:      unquote("rgb(#{$palette-light-blue-800})");
+$link-color:            unquote("rgb(#{$palette-blue-A200})");
+$link-hover-color:      unquote("rgb(#{$palette-blue-A400})");
 $link-hover-decoration: underline;
 
 $table-border-color:    unquote("rgb(#{$palette-grey-200})");
