--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -45,11 +45,13 @@
 @import "components/forms";
 @import "components/grid";
 @import "components/wp-classes";
+@import "components/entry-mata";
 
 @import "layouts/base";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/home";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
