add css animation
jelly

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -36,6 +36,7 @@
 @import "~material-design-lite/src/grid/grid";
 
 
+@import "common/animation";
 @import "common/font";
 @import "common/global";
 @import "common/type";
