--- a/assets/styles/layouts/_base.scss
+++ b/assets/styles/layouts/_base.scss
@@ -1,7 +1,15 @@
-main.main {
+.main-container {
   min-height: calc(100vh - #{$layout-desktop-header-height});
 
   @media screen and (max-width: $layout-screen-size-threshold) {
     min-height: calc(100vh - #{$layout-mobile-header-height});
+  }
+}
+
+.page-header {
+  padding-left: $base-size;
+  h1 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
