--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -13,7 +13,6 @@
     color: $link-color;
     border-bottom: 1px solid $link-border-color;
     padding: 0 0 1px 0;
-    transition: all .3s ease;
 
     &:hover {
       border-color: $link-color;
@@ -24,7 +23,7 @@
     margin: 0 0 1.7rem;
   }
 
-  code {
+  p > code {
     @extend .mdl-color--blue-50, .mdl-color-text--blue-A200;
     border-radius: ($spacer * .125);
     padding: .2rem .4rem;
