--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -28,6 +28,7 @@ body {
 a {
   color: $link-color;
   text-decoration: none;
+  transition: all .3s ease;
 
   &:hover,
   &:focus {
@@ -45,8 +46,10 @@ a {
 
 // Code
 pre {
-  font-family: $font-family-monospace;
   overflow: auto;
+}
+pre, code {
+  font-family: $font-family-monospace;
 }
 
 // Figures
