add Bootstrap migration style
bootstrap like

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import "common/global";
 @import "common/type";
 @import "common/mdl";
+@import "common/bootstrap";
 
 @import "components/buttons";
 @import "components/forms";
