--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -9,9 +9,9 @@ $modular-scale-ratio: $major-second;
 //
 // Font
 // -------------------------
-
-$font-family-base:        "Open Sans", "Helvetica Neue", Helvetica, Arial, YuGothic, "Yu Gothic", "Noto Sans", "Hiragino Sans", Emoji, sans-serif !default;
-$font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
+$font-jpn:                YuGothic, "Yu Gothic", "Noto Sans", "Hiragino Sans";
+$font-family-base:        "Open Sans", "Helvetica Neue", Helvetica, Arial, #{$font-jpn}, Emoji, sans-serif !default;
+$font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", #{$font-jpn}, monospace !default;
 
 // MDL
 $preferred_font:   $font-family-base;
