--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -48,6 +48,7 @@
 @import "components/grid";
 @import "components/wp-classes";
 @import "components/entry-mata";
+@import "components/pagination";
 
 @import "layouts/base";
 @import "layouts/header";
