--- a/assets/styles/common/_font.scss
+++ b/assets/styles/common/_font.scss
@@ -12,8 +12,9 @@
 .material-icons {
   @include typo-icon;
 
-  width: 1em;
-  height: 1em;
+  width: 1rem;
+  height: 1rem;
+  font-size: 1rem;
   white-space: nowrap;
   direction: ltr;
   vertical-align: middle;
