--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -36,6 +36,7 @@
   .entry-title a {
     color: inherit;
     font-size: $font-size-h2;
+    font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
