--- a/assets/styles/components/_pagination.scss
+++ b/assets/styles/components/_pagination.scss
@@ -1,3 +1,4 @@
+// pagination
 .pagination-container {
   text-align: center;
 }
@@ -31,18 +32,18 @@
     }
 
     .previous {
-      > a, > span {
+      > a {
         margin-right: $spacer;
       }
     }
     .next {
-      > a, > span {
+      > a {
         margin-left: $spacer;
       }
     }
   }
 
-  > li > a, > li > span {
+  > li > a {
     &:hover,
     &:focus {
       z-index: 2;
@@ -50,7 +51,7 @@
     }
   }
 
-  > .active > a, > .active > span {
+  > .active > span {
     &,
     &:hover,
     &:focus {
@@ -61,15 +62,49 @@
     }
   }
 
-  > .disabled {
-    > span,
-    > span:hover,
-    > span:focus,
+}
+
+
+// pager
+.pager {
+  padding-left: 0;
+  margin: $spacer 0;
+  list-style: none;
+  text-align: center;
+
+  @include clearfix;
+
+  li > a {
+    text-decoration: none;
+    line-height: $line-height-base;
+    padding: .75rem 1rem;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+    @extend .mdl-color--white, .mdl-color-text--grey-600;
+
+    &:hover {
+      @extend .mdl-color--grey-100, .mdl-color-text--grey-800;
+    }
+    &:focus {
+      outline: 0;
+    }
+
+  }
+
+  .previous > a {
+    float: left;
+  }
+  .next > a {
+    float: right;
+  }
+
+  .disabled {
     > a,
     > a:hover,
     > a:focus {
-      @extend .mdl-color-text--grey-200;
+      @extend .mdl-color--grey-200, .mdl-color-text--grey-400;
       cursor: not-allowed;
     }
   }
+
 }
