--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -32,8 +32,19 @@
   }
 
   blockquote {
-    @extend .mdl-color-text--grey-500;
+    position: relative;
     padding: 1rem;
+    @extend .mdl-color-text--grey-500;
+
+    &:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: '"';
+      font-family: emoji;
+      font-size: 2rem;
+      line-height: 1rem;
+    }
 
     > *:first-child,
     > *:last-child {
