--- a/assets/styles/components/_entry-mata.scss
+++ b/assets/styles/components/_entry-mata.scss
@@ -10,7 +10,7 @@
       display: inline-block;
       margin-bottom: 0;
 
-      &:not(:last-child) {
+      &:not(:first-child):not(:last-child) {
         margin-right: 8px;
       }
       a {
