--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -132,3 +132,12 @@
 
 
 }
+
+.archive-list {
+  padding: 0;
+  li {
+    display: inline;
+    margin-right: 1rem;
+    white-space: nowrap;
+  }
+}
