--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -49,6 +49,7 @@
 @import "components/wp-classes";
 @import "components/entry-mata";
 @import "components/pagination";
+@import "components/breadcrumb";
 
 @import "layouts/base";
 @import "layouts/header";
