--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -35,6 +35,8 @@
 @import "~material-design-lite/src/shadow/shadow";
 @import "~material-design-lite/src/grid/grid";
 
+@import "~prismjs/themes/prism.css";
+@import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
 
 @import "common/animation";
 @import "common/font";
