--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import "~material-design-lite/src/shadow/shadow";
 @import "~material-design-lite/src/grid/grid";
 
+// Prism.js
 @import "~prismjs/themes/prism.css";
 @import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
 
@@ -52,6 +53,7 @@
 @import "components/entry-mata";
 @import "components/pagination";
 @import "components/breadcrumb";
+@import "components/mokuji";
 
 @import "layouts/base";
 @import "layouts/header";
