add share button

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -51,6 +51,7 @@
 @import "components/pagination";
 @import "components/breadcrumb";
 @import "components/mokuji";
+@import "components/share";
 
 @import "layouts/base";
 @import "layouts/header";
