--- a/assets/styles/common/_animation.scss
+++ b/assets/styles/common/_animation.scss
@@ -1,5 +1,5 @@
 .showIn {
-  animation: showIn 0.3s cubic-bezier(0.55, 0, 0.1, 1) forwards;
+  animation: showIn 0.3s $animation-curve-fast-out-slow-in forwards;
 }
 
 @keyframes showIn {
