--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -66,3 +66,6 @@
 // Prism.js
 @import "plugins/prismjs";
 @import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
+
+// image-zoom
+@import "~image-zoom/dist/imagezoom.css";
