--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -1,45 +1,52 @@
 .card-container {
-  max-height: 23rem;
-
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-content: flex-start;
-  align-items: flex-start;
-
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
   cursor: pointer;
   transition: all .3s ease;
-
+  will-change: animation, transform;
+  
   &:hover {
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2);
-
     .entry-image-sheet {
       transform: scale(1.15);
     }
-    .entry-title a {
+    .entry-title {
       color: $link-hover-color;
+    }
+  }
+
+  .entry-wrap {  // <a>
+    max-height: 23rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    align-items: flex-start;
+
+    &:active,
+    &:focus {
+      outline: 0;
+    }
+
+    > *:first-child {
+      padding-bottom: 0;
+    }
+    > *:last-child {
+      padding-top: 0;
+      padding-bottom: 1rem;
     }
 
   }
 
-  .entry-image,
   .mdl-card__title,
   .mdl-card__supporting-text,
   .mdl-card__actions {
     width: 100%;
   }
 
-  > *:first-child {
-    padding-bottom: 0;
-  }
-  > *:last-child {
-    padding-top: 0;
-    padding-bottom: 1rem;
-  }
-
+  // Thumbnail Image
   .entry-image {
+    width: 100%;
     height: 12rem;
     overflow: hidden;
 
@@ -48,14 +55,13 @@
       text-align: center;
       height: 100%;
       width: 100%;
-      .material-icons {
+      > .material-icons {
         font-size: 6rem;
         display: table-cell;
         vertical-align: middle;
         color: unquote("rgb(#{$palette-grey-300})");
       }
     }
-
   }
   .entry-image-sheet {
     height: inherit;
@@ -64,25 +70,21 @@
     transition: transform 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
 
+  // Entry Title
   .mdl-card__title {
     padding-bottom: 0;
   }
   .entry-title {
     font-weight: normal;
-    a {
-      color: inherit;
-      font-size: $font-size-h3;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      display: block;
-
-      &:focus {
-        outline: 0;
-      }
-    }
+    color: inherit;
+    font-size: $font-size-h3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
   }
 
+  // Entry Excerpt
   .entry-summary {
     font-size: $font-size-sm;
     line-height: 1.75;
