--- a/assets/styles/components/_mokuji.scss
+++ b/assets/styles/components/_mokuji.scss
@@ -14,7 +14,10 @@
   padding-left: 1rem;
 
   a {
-    border: none;
+    border: none !important;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   ol {
