--- a/assets/styles/layouts/_base.scss
+++ b/assets/styles/layouts/_base.scss
@@ -1,5 +1,6 @@
 .main-container {
   min-height: calc(100vh - #{$layout-desktop-header-height});
+  max-width: $container-max-width;
 
   @media screen and (max-width: $layout-screen-size-threshold) {
     min-height: calc(100vh - #{$layout-mobile-header-height});
