--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -1,4 +1,5 @@
 .card-container {
+  max-height: 23rem;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
   cursor: pointer;
   transition: all .3s ease;
@@ -15,7 +16,7 @@
   }
 
   .entry-wrap {  // <a>
-    max-height: 23rem;
+    max-height: inherit;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
