add: bootstrap migrate

--- a/assets/styles/common/_bootstrap.scss
+++ b/assets/styles/common/_bootstrap.scss
@@ -48,3 +48,13 @@
 .text-danger {
   color: unquote("rgb(#{$palette-red-400})");
 }
+
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
+}
