--- a/assets/styles/components/_share.scss
+++ b/assets/styles/components/_share.scss
@@ -45,13 +45,13 @@ $hatena-color:   #2c6ebd;
 
 .btn-twitter {
   background-color: $twitter-color;
-  background-image: url("../../images/svg/twitter.svg");
+  background-image: url("../images/svg/twitter.svg");
 }
 .btn-facebook {
   background-color: $facebook-color;
-  background-image: url("../../images/svg/facebook.svg");
+  background-image: url("../images/svg/facebook.svg");
 }
 .btn-hatena {
   background-color: $hatena-color;
-  background-image: url("../../images/svg/hatena-bookmark.svg");
+  background-image: url("../images/svg/hatena-bookmark.svg");
 }
