--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,7 +1,7 @@
 @import "~bourbon/app/assets/stylesheets/bourbon";
 @import "~bourbon-neat/app/assets/stylesheets/neat";
 
-// Import MDL from node_modules/...
+// Import npm dependencies
 @import "~material-design-lite/src/color-definitions";
 @import "common/variables";
 
