--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:         kiku
 Theme URI:          https://github.com/hiro0218/kiku-theme
-Description:        In sophisticated image like a chrysanthemum. Theme based Sage.
+Description:        In sophisticated image like a chrysanthemum.
 Version:            0.1.0
 Author:             hiro
 Author URI:         http://b.0218.jp/
