--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  p, pre, blockquote, ul, ol, dl, figure, table, form, div {
+  p, pre, blockquote, ul, ol, dl, figure, table, form, img, div {
     margin: 0 0 1.7rem;
   }
 
