--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -144,3 +144,16 @@
     white-space: nowrap;
   }
 }
+
+// amazlet 
+.amazlet-image img {
+  max-height: 10rem;
+}
+.amazlet-name {
+  line-height: 2 !important;
+}
+.amazlet-detail,
+.amazlet-powered-date,
+.amazlet-sub-info {
+  display: none;
+}
