--- a/assets/styles/common/_mdl.scss
+++ b/assets/styles/common/_mdl.scss
@@ -4,6 +4,19 @@
   scroll-behavior: smooth;
 }
 
+// header fixed
+.mdl-layout__content {
+  flex-shrink: 0;
+}
+.mdl-layout__drawer.is-visible~.mdl-layout__content {
+  overflow: hidden;
+  height: calc(100vh - #{$layout-desktop-header-height});
+
+  @media screen and (max-width: $layout-screen-size-threshold) {
+    height: calc(100vh - #{$layout-mobile-header-height});
+  }
+}
+
 .mdl-layout__header {
   display: block !important;  // always visible
 }
