--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -24,6 +24,13 @@ body {
   }
 
   font-size: $font-size-base;
+  @media screen and (max-width: $screen-sm) {
+    font-size: $font-size-base - 1;
+  }
+  @media screen and (min-width: $screen-md) {
+    font-size: $font-size-base + 1;
+  }
+
   font-weight: $font-weight-base;
   line-height: $line-height-base;
 
