--- a/assets/styles/common/_mdl.scss
+++ b/assets/styles/common/_mdl.scss
@@ -39,11 +39,11 @@
   font-weight: inherit;
 }
 
-.mdl-layout__obfuscator {
-  &.is-visible {
-    background-color: rgba(255,255,255, 0.5);
-  }
-}
+// .mdl-layout__obfuscator {
+//   &.is-visible {
+//     background-color: rgba(255,255,255, 0.5);
+//   }
+// }
 
 .mdl-color--transparent {
   background: transparent;
