--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -27,24 +27,24 @@
     @extend .mdl-color--blue-50, .mdl-color-text--blue-A200;
     border-radius: ($spacer * .125);
     padding: .2rem .4rem;
-    white-space: nowrap;
     line-height: 2;
   }
 
   blockquote {
     position: relative;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1.5rem;
+    border-left: 4px solid unquote("rgb(#{$palette-grey-500})");
     @extend .mdl-color-text--grey-500;
 
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      content: '"';
-      font-family: emoji;
-      font-size: 2rem;
-      line-height: 1rem;
-    }
+    // &:before {
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   content: '"';
+    //   font-family: emoji;
+    //   font-size: 2rem;
+    //   line-height: 1rem;
+    // }
 
     > *:first-child,
     > *:last-child {
@@ -123,7 +123,7 @@
     font-size: $font-size-h2;
     height: 2rem;
     line-height: 1;
-    margin: .85rem 0;
+    margin: 2rem 0;
     text-align: center;
 
     &:before {
@@ -145,7 +145,7 @@
   }
 }
 
-// amazlet 
+// amazlet
 .amazlet-image img {
   max-height: 10rem;
 }
