:up: package update

--- a/assets/styles/common/_mdl.scss
+++ b/assets/styles/common/_mdl.scss
@@ -48,3 +48,8 @@
 .mdl-color--transparent {
   background: transparent;
 }
+
+.mdl-layout__drawer-button,
+.mdl-layout__drawer-button {
+  line-height: 1.75;
+}
