--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -5,7 +5,8 @@
   @extend .mdl-color--white, .mdl-color-text--grey-600;
 
   h1 {
-    line-height: 2rem;
+    font-weight: normal;
+    line-height: 1.3;
     margin: ($spacer / 2) auto;
   }
 
@@ -32,10 +33,10 @@
 
   blockquote {
     // position: relative;
-    padding: .8rem;
+    padding: 1.6rem;
     margin-left: .8em;
     border-left: 4px solid unquote("rgb(#{$palette-grey-200})");
-    @extend .mdl-color-text--grey-700;
+    @extend .mdl-color-text--grey-500;
 
     // &:before {
     //   position: absolute;
