--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -14,22 +14,22 @@
 @import "~material-design-lite/src/badge/badge";
 @import "~material-design-lite/src/button/button";
 @import "~material-design-lite/src/card/card";
-@import "~material-design-lite/src/checkbox/checkbox";
-@import "~material-design-lite/src/data-table/data-table";
-@import "~material-design-lite/src/dialog/dialog";
+// @import "~material-design-lite/src/checkbox/checkbox";
+// @import "~material-design-lite/src/data-table/data-table";
+// @import "~material-design-lite/src/dialog/dialog";
 @import "~material-design-lite/src/footer/mega_footer";
 @import "~material-design-lite/src/footer/mini_footer";
 @import "~material-design-lite/src/icon-toggle/icon-toggle";
-@import "~material-design-lite/src/list/list";
+// @import "~material-design-lite/src/list/list";
 @import "~material-design-lite/src/menu/menu";
-@import "~material-design-lite/src/progress/progress";
+// @import "~material-design-lite/src/progress/progress";
 @import "~material-design-lite/src/layout/layout";
-@import "~material-design-lite/src/radio/radio";
-@import "~material-design-lite/src/slider/slider";
+// @import "~material-design-lite/src/radio/radio";
+// @import "~material-design-lite/src/slider/slider";
 @import "~material-design-lite/src/snackbar/snackbar";
-@import "~material-design-lite/src/spinner/spinner";
+// @import "~material-design-lite/src/spinner/spinner";
 @import "~material-design-lite/src/switch/switch";
-@import "~material-design-lite/src/tabs/tabs";
+// @import "~material-design-lite/src/tabs/tabs";
 @import "~material-design-lite/src/textfield/textfield";
 @import "~material-design-lite/src/tooltip/tooltip";
 @import "~material-design-lite/src/shadow/shadow";
@@ -52,6 +52,7 @@
 @import "components/breadcrumb";
 @import "components/mokuji";
 @import "components/share";
+@import "components/similar";
 
 @import "layouts/base";
 @import "layouts/header";
