:recycle: rename file

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -3,7 +3,7 @@
 // -------------------------
 $base-size: 16px;
 $modular-scale-base:  1rem;
-$modular-scale-ratio: $minor-third;
+$modular-scale-ratio: $major-second;
 // $golden:           1.618;
 // $minor-second:     1.067;
 // $major-second:     1.125;
