--- a/assets/styles/common/_grid.scss
+++ b/assets/styles/common/_grid.scss
@@ -15,5 +15,13 @@
 
   // .mdl-grid {}
   // .mdl-cell {}
+}
 
+.main-container {
+  min-height: calc(100vh - #{$layout-desktop-header-height});
+  max-width: $container-max-width;
+
+  @media screen and (max-width: $layout-screen-size-threshold) {
+    min-height: calc(100vh - #{$layout-mobile-header-height});
+  }
 }
