--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,72 +1,43 @@
+// Bourbon
 @import "~bourbon/app/assets/stylesheets/bourbon";
 @import "~bourbon-neat/app/assets/stylesheets/neat";
 
-// Import npm dependencies
-@import "~material-design-lite/src/color-definitions";
-@import "common/variables";
+// Material Deign Lite
+@import "material-design-lite";
+@import "tweak/mdl";
 
-@import "~material-design-lite/src/variables";
-@import "~material-design-lite/src/mixins";
-// @import "~material-design-lite/src/typography/typography";
-@import "~material-design-lite/src/palette/palette";
-@import "~material-design-lite/src/ripple/ripple";
-@import "~material-design-lite/src/animation/animation";
-@import "~material-design-lite/src/badge/badge";
-@import "~material-design-lite/src/button/button";
-@import "~material-design-lite/src/card/card";
-// @import "~material-design-lite/src/checkbox/checkbox";
-// @import "~material-design-lite/src/data-table/data-table";
-// @import "~material-design-lite/src/dialog/dialog";
-@import "~material-design-lite/src/footer/mega_footer";
-@import "~material-design-lite/src/footer/mini_footer";
-@import "~material-design-lite/src/icon-toggle/icon-toggle";
-// @import "~material-design-lite/src/list/list";
-@import "~material-design-lite/src/menu/menu";
-// @import "~material-design-lite/src/progress/progress";
-@import "~material-design-lite/src/layout/layout";
-// @import "~material-design-lite/src/radio/radio";
-// @import "~material-design-lite/src/slider/slider";
-@import "~material-design-lite/src/snackbar/snackbar";
-// @import "~material-design-lite/src/spinner/spinner";
-@import "~material-design-lite/src/switch/switch";
-// @import "~material-design-lite/src/tabs/tabs";
-@import "~material-design-lite/src/textfield/textfield";
-@import "~material-design-lite/src/tooltip/tooltip";
-@import "~material-design-lite/src/shadow/shadow";
-@import "~material-design-lite/src/grid/grid";
-
-
-@import "common/animation";
-@import "common/font";
-@import "common/global";
-@import "common/type";
-@import "common/mdl";
-@import "common/bootstrap";
-
-@import "components/buttons";
-@import "components/forms";
-@import "components/grid";
-@import "components/wp-classes";
-@import "components/entry-mata";
-@import "components/pagination";
-@import "components/breadcrumb";
-@import "components/mokuji";
-@import "components/share";
-@import "components/similar";
-
-@import "layouts/base";
-@import "layouts/header";
-@import "layouts/sidebar";
-@import "layouts/footer";
-@import "layouts/home";
-@import "layouts/pages";
-@import "layouts/posts";
-@import "layouts/tinymce";
-
-
-// Prism.js
+// prism.js
 @import "plugins/prismjs";
 @import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
 
 // image-zoom
 @import "~image-zoom/dist/imagezoom.css";
+
+// styles
+@import "animation";
+@import "font";
+
+@import "common/global";
+@import "common/type";
+@import "common/grid";
+
+@import "components/wp-classes";
+@import "components/pagination";
+@import "components/breadcrumb";
+@import "components/mokuji";
+
+// Layout
+@import "layouts/header";
+@import "layouts/home";
+@import "layouts/sidebar";
+@import "layouts/footer";
+@import "layouts/partials/entry";
+@import "layouts/partials/entry-mata";
+@import "layouts/partials/entry-share";
+@import "layouts/partials/entry-similar";
+
+// migration
+@import "migration/bootstrap";
+
+// for Admin Page
+@import "plugins/tinymce";
